--- a/html/mockbook.html
+++ b/html/mockbook.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/index_styles.css">
+	<link rel="stylesheet" type="text/css" href="../css/index_style.css">
 	
 	<script src="../jQuery/jquery-3.2.1.min.js" defer></script>
 	<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js" defer></script>
