--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head  lang="en">
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="0; url=https://github.com/danyalasif/By-The-Book/tree/master/html/index.html" />
+    <meta http-equiv="refresh" content="0; url=https://github.com/danyalasif/By-The-Book/tree/master/html" />
 </head>
 <body>
 </body>
