refined extra large views

--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,7 @@
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	<link rel="stylesheet" type="text/css" href="../css/index_style.css">
 	<link rel="stylesheet" type="text/css" href="../css/about_style.css">
 	
@@ -38,7 +39,7 @@
 			
 			<div class="collapse navbar-collapse" id="firstNavBar">
 				<div class="row">
-					<div class="col-md-12 col-lg-12">
+					<div class="col-md-12">
 						<ul class="nav navbar-nav">
 							<li>
 								<a href="contact.html"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> Contact Us</a>
@@ -170,7 +171,7 @@
 				</div>
 				
 				
-				<div class="col-md-12 col-lg-12 reset-right">
+				<div class="col-md-12 reset-right">
 					<a href="../index.html" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> by the book</a>
 					<form class="navbar-form navbar-right" role="search">
 						<div class="form-group">
