tweaked navbar radius, tweaked relative paths

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="css/index_style.css">
 	
 	
-	<script src="../jQuery/jquery-3.2.1.min.js" defer></script>
-	<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js" defer></script>
+	<script src="jQuery/jquery-3.2.1.min.js" defer></script>
+	<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" defer></script>
 	
 	<!-- <script src="https://code.jquery.com/jquery-3.2.1.js" defer></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script> -->
